[gd_scene load_steps=2 format=3 uid="uid://c7xgnhcy66sd8"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_yf1d4"]

[node name="killzone" type="Area2D"]
script = ExtResource("1_yf1d4")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
